# zero2prod

./: .env  Cargo.toml  Makefile  configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
